# stagehands

./: .dockerignore  .env  .gitignore  README.md  docker-compose-linux.yaml  docker-compose-macos.yaml  docker-compose-wslg.yaml  docker-compose.yaml  install.sh  launch_linux.sh  launch_macos.sh  launch_win.bat  launch_wsl.bat  launch_wslg.bat  package-lock 2.json  package-lock.json  package.json  presentation_inspiration.md  tsconfig 2.json
.parcel-cache/: 1e543e9cb1fcc8ac  2786edd980e167ec  544a928c0a7a711a.txt  a9f5484dda8bfe2c  ad2e60fb0ef4d33e  df50abe36c904be8  f706578edeffb36e.txt  lock.mdb
__schema/: tsconfig.json
_schema/: tsconfig.json
basebot/: .devcontainer.json  Dockerfile  README.md  helpers.sh
basebot/src/basebot-client/: CMakeLists.txt  package-lock.json  package.json  package.xml
basebot/src/basebot-client/src/: client.js  listener.js  talker.js
bot_setup/: install.sh
bridge/: README.md  package.json  tsconfig.json
dice/: install_turtlebot.sh
docker/: docker-compose-linux.yaml  docker-compose-macos.yaml  docker-compose-wsl.yaml  docker-compose-wslg.yaml
experimental/: .main.go.~undo-tree~  README.md  components.go  go.mod  go.sum  image.go  image_test.go  main.go  main.go~  server.go  util.go
fake_bridge/: package-lock.json  package.json  tsconfig.json
magic/: demo.py  led.py  motor.py
ros/: docker-compose-linux.yaml  docker-compose-macos 3.yaml  docker-compose-macos.yaml  docker-compose-wsl 2.yaml  docker-compose-wsl.yaml  docker-compose-wslg.yaml  docker-compose.build.yaml  docker-compose.dev.yaml  docker-compose.devmount.yaml  docker-compose.linux.yaml  docker-compose.macos.yaml  docker-compose.prebuild.yaml  docker-compose.prod.yaml  docker-compose.rpi.yaml  docker-compose.useprebuild.yaml  docker-compose.wsl.yaml  docker-compose.wslg.yaml  docker-compose.yaml  (+12 more)
(+1219 files in other folders)
