<?xml version="1.0"?>
<package>
  <name>basebot-client</name>
  <version>0.0.0</version>
  <description>WebTopics client for the basebot</description>

  <maintainer email="shiukaheng@gmail.com">Heng</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="shiukaheng@gmail.com">Heng</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>